# BusMgmtDoltDatabase

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  install.md  process_financial_data.prompt.yml  pyproject.toml  requirements.txt  run_chainlit.sh  setup_mcps.sh  stdio_mcp_setup.md  unified_sse_server.py  unified_sse_server.py.current
.idx/: dev.nix
data/: american-companies.csv  companies.csv  insert_all.sql  nonamerican-companies.csv  prompt.txt
docs/: BusMgmtApiDocs.md  BusMgmtDoltDatabaseDocumentation.md  RestApiBusMgmtDoltDatabase.md  VibeCodingBusMgmtBenchmarks.md  busmgmt_api_tester.py
docs/api_responses/: all_responses_consolidated.json  amazon_growth_trends.json  amazon_metrics_2023.json  available_segments.json  available_subsegments.json  company_by_ticker.json  company_info_all.json  company_info_grocery.json  efficiency_ratios_2023.json  financials_walmart_2023.json  grocery_companies_metrics.json  grocery_peer_comparison.json  grocery_segment_benchmark.json  liquidity_ratios.json  profitability_metrics_2023.json  query_summary.json  retail_subsegments.json  revenue_data_2023.json  search_walmart.json  segment_benchmarks_2023.json  segment_profitability_comparison.json  show_tables.json  subsegment_benchmarks_2023.json  (+4 more)
mcp-dolt-database/: README.md  cloudbuild.yaml  config.json  deploy-gcloud.sh  deploy_heroku.sh  dolt_server.py  mcp_dolt_database.py  pyproject.toml  run_chainlit.sh  run_inspector.sh  sse_server.py
mcp-greet/: README.md  config.json  pyproject.toml  server.py
mcp-sec-10ks/: .dockerignore  README.md  client.py  cloudbuild.yaml  companies-small.csv  companies.csv  config.json  deploy-gcloud.sh  deploy.sh  deploy_heroku.sh  insert_2024.sql  llm_for_10K_financial_data.qmd  log.txt  mcp_sec_10ks.py  proxy.py  pyproject.toml  requirements.txt  run_batch_client.sh  run_client.sh  run_single_company.sh  sec_server.py  server.py  sse_server.py  test_sec_tools.py  test_single_company.sh
mcp-sec-10ks/bak/: batch_client copy.py  batch_client.py  batch_client_working.py  client copy 2.py  client.py  main copy 2.py  main copy 3.py  main copy.py  main_working.py  pyproject copy.toml
mcp-sec-10ks/financial_reports/: client.py  run_client.sh
mcp-sec-10ks/proxy/: client.py  config.json  debug_client.py  llm_proxy_server.py  main_mcp_server.py  minimal_client.py  proxy.py  server.py  simple_client.py
mcp-sec-10ks/sampling/: client.py  companies-small.csv  fastmcp_client.py  fastmcp_server.py  mcp_sec_10ks.py  run_client.sh  test_fastmcp.sh
mcp-yfinance-10ks/: README.md  cloudbuild.yaml  config.json  deploy-gcloud.sh  deploy_heroku.sh  pyproject.toml  requirements.txt  server.py  server.py.working  sse_server.py  test_macys.py  walmart.txt  yfinance_server.py
sql/: .gitignore  american_companies.csv  comparison_view.sql  complete_views.sql  insert_2024.sql  insert_all.sql  insert_buildabear.sql  insert_buildabear_data.sql  insert_missing_2024.sql  insert_nonamerical.sql  insert_nordstrom.sql  insert_query_2024.sql  insert_two.sql  query.sql  query.sql.save  reportDateInfo.txt  run_query.sh  run_views.sql  show_create_view.sql  update_all_2024.sql  update_metrics.sh  update_nordstrom.sql  update_reportdates.sql  update_reportdates_2024.sql  update_subsegment_metrics.sql.bak
sql.bak/: complete_views.sql  update_segment_metrics.sql
