[project]
name = "mcp-dolt-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
                "chainlit-mcp-client @ git+https://github.com/calvinw/chainlit-mcp-client",
                "fastmcp", 
                "fastapi", 
                "requests"
               ]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "sse_server"]
